--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class = "contHeader">
         <img class = "logo" src="../public/images/logoPag1.png">
-        <!-- <h1 class = "webName"> Find Pool</h1> !--> 
+        <h1 class = "titulo">EasyPool</h1> 
         <div class = "dataUser">
             <img class= "fotoPerfil" src="../public/images/fotoPerfil.jpg">
             <h3 class = "userName"> Bautista Iorfida </h3>
@@ -25,30 +25,48 @@
       </nav> 
       
 <main class = "contMain">
-        <div class="calendario">
-          
-            <button type="button" class="btn btn-outline-success">Calendario</button>
-            <img class= "fotoCalendar" src="../public/images/calendar.jpg">
-            <div class="card">
-                <div class="card-header">
-                  Viajes de esta semana:
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">7:30 ir a la Universidad</li>
-                  <li class="list-group-item">17:30 ir a Tenis (martes)</li>
-                  <li class="list-group-item">18:00 vuelta de la Universidad</li>
-                </ul>
-              </div>
-        </div>
-
-        <div class="mapa">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
     
+    <div class="carrusel">
+        <img class = "logo" src="../public/images/viajeAmigos.JPG">
+    </div>
+    
+    <div class="mainCards">
+
+        <div class="card text-center cards">
+            <button type="button" class="btn btn-outline-success">Calendario</button>
+            <div class="card-body">
+              <img class= "fotoCalendar" src="../public/images/calendar.jpg">
+            </div>
+            <div class="card-footer text-muted">
+              Edited 2 days ago
+            </div>
+          </div>
+
+        <div class="card text-center cards">
+            <button type="button" class="btn btn-outline-success">Ver amigos en el mapa</button>
+            <div class="card-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="card-footer text-muted">
+              Edited 2 days ago
+            </div>
+          </div>
+
+
+        <div class="card text-center cards">
+            <button type="button" class="btn btn-outline-success">Solicitudes de Poolers</button>
+            <div class="card-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="card-footer text-muted">
+              Edited 2 days ago
+            </div>
+          </div>
+    </div>
 </main>
 
-<footer>
-    <div class="contenedorFooter">  <!-- Contenedor padre del Footer -->
+<footer class="contenedorFooter">
+  
 
         <div class="contFooterA"> <!-- Contenedor del logo del Footer -->
             <img src="../public/images/logoPag1.png" width= "105px"> 
@@ -56,13 +74,19 @@
 
         <div class="contFooterB">   <!-- Contenedor del contacto del Footer -->
 
-            <h2> Contactanos para opiniones:</h2> 
+            <h2> Contactanos:</h2> 
             <p>Ejemplo@gmail.com</p>
             <p>+54 911 27284692</p>
             <p>direccion del lugar</p>
         </div>
 
-    </div>
+        <div class="contFooterC">   <!-- Contenedor de preguntas del Footer -->
+            <h2> Necesitas ayuda?</h2> 
+            <p> Mandanos tu consulta:</p> 
+            <textarea class="form-control input-group" aria-label="With textarea"></textarea>
+        </div>
+
+
 </footer> 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
