--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,9 +4,8 @@ body footer{
 
 .contHeader {
     display: flex;
-    background-image: url("../images/viajeMar.JPG");
+    background-image: url("../images/fondoHeader.png");
     width: 100%;
-    height: 200px;
     background-size: cover;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -17,8 +16,14 @@ body footer{
 nav {
     background-color: #CAFABE;
 }
-.logo {
-    margin-left: 5%;
+.logoImg {
+    width: 15%;
+    height: 100%;
+
+}
+
+.ejemplo{
+    justify-content: left;
 }
 
 .logoFooter{
@@ -30,17 +35,34 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    width: 20%;
+}
+.titulo{
+    display: flex;
+    align-items: center;
+
 }
 
 .fotoPerfil {
-    width: 50%;
-    height: 50%;
+    width: 25%;
 }
 
 .userName {
     font-family: 'Grape Nuts', cursive;
     color: white;
+}
+
+.botonNav{
+height: 50px;
+}
+
+.contfotosMain{
+    margin:3% 20% 3% 20%;
+    width: 60%;
+}
+
+.fotosMain{
+    width: 80%;
 }
 
 .contMain {
@@ -56,9 +78,12 @@ nav {
     justify-content: space-around;
     width: 100%;
     background-color: burlywood;
+    padding: 5%;
+    
 }
 .cards{
-    width: 25%;
+    width: 250px;
+    margin-top: 15px;
     background-color: rgb(60, 156, 124);
     display: flex;
     flex-direction: column;
@@ -72,6 +97,7 @@ nav {
 
 .mapa {
     background-color: darkslategrey;
+    width: 100%;
 }
 
 .solicitudes {
@@ -84,7 +110,7 @@ nav {
  footer {
     bottom:0;
     width:100%;
-    height:60px;  
+    height:600px;  
     background:#6cf;
  }
 
@@ -93,7 +119,7 @@ nav {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-around;
+    justify-content:space-evenly;
     color: #198754;
     padding: 4%;
 }
@@ -139,9 +165,11 @@ nav {
     }
     .contFooterA img {
         width: 90%;
-        padding-top: 15px;
     }
     a.categFooter {
         width: 90%;
+    }
+    .card{
+    width: 25%;
     }
     }
