--- a/views/index.html
+++ b/views/index.html
@@ -9,27 +9,61 @@
 </head>
 <body>
     <header class = "contHeader">
-        <img class = "logo" src="../public/images/logoPag1.png">
-        <h1 class = "titulo">EasyPool</h1> 
+        <img class = "logoImg" src="../public/images/logoPag1.png">
         <div class = "dataUser">
             <img class= "fotoPerfil" src="../public/images/fotoPerfil.jpg">
             <h3 class = "userName"> Bautista Iorfida </h3>
         </div>
     </header>
-    <nav class="nav nav-pills flex-column flex-sm-row p-2 text-dark bg-opacity-50">
-        <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#"> <button type="button" class="btn btn-outline-success">Inicio</button></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success">Quiénes somos?</button></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"><button type="button" class="btn btn-outline-success">Agregá tu nuevo viaje</button></div></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success">Contacto</button></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success">Mi cuenta</button></div>
+    <nav class=" nav nav-pills flex-column flex-sm-row p-2 text-dark bg-opacity-50 ">
+        <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#"> <button type="button" class="btn btn-outline-success botonNav">Inicio</button></div>
+        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success botonNav">Quiénes somos?</button></div>
+        <div class="flex-sm-fill text-sm-center nav-link" href="#"><button type="button" class="btn btn-outline-success botonNav">Agregá tu nuevo viaje</button></div></div>
+        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success botonNav">Contacto</button></div>
+        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success botonNav">Mi cuenta</button></div>
       </nav> 
       
 <main class = "contMain">
     
-    <div class="carrusel">
-        <img class = "logo" src="../public/images/viajeAmigos.JPG">
+  <div id="carouselExampleCaptions" class="carousel slide contfotosMain" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../public/images/amigosCarrusel.jpg" class="d-block w-100 fotosMain" alt="fotos de amigos">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../public/images/ecologiaCarrusel.jpg" class="d-block w-100 fotosMain" alt="fotos de ecologia">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../public/images/paisajeCarrusel.jpg" class="d-block w-100 fotosMain" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
     <div class="mainCards">
 
         <div class="card text-center cards">
@@ -45,18 +79,17 @@
         <div class="card text-center cards">
             <button type="button" class="btn btn-outline-success">Ver amigos en el mapa</button>
             <div class="card-body">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
             </div>
             <div class="card-footer text-muted">
               Edited 2 days ago
             </div>
           </div>
 
-
         <div class="card text-center cards">
             <button type="button" class="btn btn-outline-success">Solicitudes de Poolers</button>
             <div class="card-body">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
             </div>
             <div class="card-footer text-muted">
               Edited 2 days ago
@@ -66,7 +99,6 @@
 </main>
 
 <footer class="contenedorFooter">
-  
 
         <div class="contFooterA"> <!-- Contenedor del logo del Footer -->
             <img src="../public/images/logoPag1.png" width= "105px"> 
