Avances en las cards y lo responsive

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
         <img class = "logoImg" src="../public/images/logoPag1.png">
         <div class = "dataUser">
             <img class= "fotoPerfil" src="../public/images/fotoPerfil.jpg">
-            <h3 class = "userName"> Bautista Iorfida </h3>
+            <h3 class = "userName"> Iniciar sesión </h3>
         </div>
     </header>
     <nav class=" nav nav-pills flex-column flex-sm-row p-2 text-dark bg-opacity-50 ">
@@ -89,7 +89,40 @@
         <div class="card text-center cards">
             <button type="button" class="btn btn-outline-success">Solicitudes de Poolers</button>
             <div class="card-body">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+
+              <div class="solicitud">
+                <div class="contImgSolicutud">
+                  <img src="../public/images/fotoPerfil.jpg" class="userImg">
+                </div> 
+                  <div>Bautista Iorfida</div>                
+                <button type="button" class="btn btn-outline-success botonMio"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                  <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+                </svg></button>
+               
+              </div> 
+              
+              <div class="solicitud">
+                <div class="contImgSolicutud">
+                  <img src="../public/images/fotoMerfilMessi.jpg" class="userImg">
+                </div> 
+                  <div>Lionel Messi</div>                
+                <button type="button" class="btn btn-outline-success botonMio"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                  <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+                </svg></button>
+               
+              </div> 
+              
+              <div class="solicitud">
+                <div class="contImgSolicutud">
+                  <img src="../public/images/fotoPerfilNadal.jpg" class="userImg">
+                </div> 
+                  <div>Reafael Nadal</div>                
+                <button type="button" class="btn btn-outline-success botonMio"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                  <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+                </svg></button>
+               
+              </div> 
+              
             </div>
             <div class="card-footer text-muted">
               Edited 2 days ago
