--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,16 +21,27 @@ nav {
     height: 100%;
 
 }
+.userImg{
+    width: 75%;
+}
 
 .ejemplo{
     justify-content: left;
+}
+
+.contImgSolicutud{
+    width: 30%;
+}
+
+.botonMio {
+    height: 10%;
+    margin-right: 5px;
 }
 
 .logoFooter{
     width: 15%;
 }
 .dataUser {
-    text-align: right;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,6 +61,7 @@ nav {
 .userName {
     font-family: 'Grape Nuts', cursive;
     color: white;
+    text-align: center;
 }
 
 .botonNav{
@@ -89,6 +101,7 @@ height: 50px;
     flex-direction: column;
     align-items: center;
     padding: 1%;
+    box-shadow: 0px 8px 10px;
 }
 
 .fotoCalendar { 
@@ -98,6 +111,7 @@ height: 50px;
 .mapa {
     background-color: darkslategrey;
     width: 100%;
+    height: 100%;
 }
 
 .solicitudes {
@@ -105,12 +119,24 @@ height: 50px;
     background-color: darkslateblue;
     height: 250px;
 }
+
+.solicitud {
+    display: flex;
+    align-items: center;
+    background-color: #cee0db;
+    border-radius: 10%;
+    margin-bottom: 7%;
+    justify-content: space-between;
+}
+p{
+    margin-bottom: 0px;
+}
+
  /*Diseño del Footer */
 
  footer {
     bottom:0;
-    width:100%;
-    height:600px;  
+    width:100%; 
     background:#6cf;
  }
 
@@ -121,7 +147,7 @@ height: 50px;
     flex-wrap: wrap;
     justify-content:space-evenly;
     color: #198754;
-    padding: 4%;
+    padding-top: 2%;
 }
 
 /* Diseño del contenedor del logo del Footer*/
