Nuevo nav responsive para celu y carrusel de fotos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,21 +1,21 @@
-body footer{
-    background-color: #CBFABE;
+main{
+    background-image: url("../images/fondoBody.png");
 }
 
 .contHeader {
     display: flex;
-    background-image: url("../images/fondoHeader.png");
+    background-image: url("../images/fondoHeader.jpg");
     width: 100%;
     background-size: cover;
-    padding-top: 15px;
-    padding-bottom: 15px;
     flex-wrap: nowrap;
     justify-content: space-between;
 }
 
-nav {
-    background-color: #CAFABE;
+.iniciarSesion{
+    width: 75%;
+    cursor: pointer;
 }
+
 .logoImg {
     width: 15%;
     height: 100%;
@@ -27,6 +27,31 @@ nav {
 
 .ejemplo{
     justify-content: left;
+}
+
+.burgerButon {
+    background-color: #325c37;
+    justify-content: right;
+    display: flex;
+}
+
+.navCeluCompu {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #CAFABE;
+    height: 100%;
+    padding: 30px;
+    opacity: .9;
+    transform: translateX(-400px);
+    transition: transform .5s ease-in-out;
+    z-index: 100;
+    padding-top: 20%;
+}
+
+.navCeluCompu.show {
+    transform: translateX(-20px);
 }
 
 .contImgSolicutud{
@@ -55,22 +80,30 @@ nav {
 }
 
 .fotoPerfil {
-    width: 25%;
+    width: 50%;
+    cursor: pointer;
 }
 
 .userName {
     font-family: 'Grape Nuts', cursive;
     color: white;
     text-align: center;
+
 }
 
 .botonNav{
 height: 50px;
 }
 
+.btn-outline-success{
+    --bs-btn-border-color: #325c37;
+}
 .contfotosMain{
-    margin:3% 20% 3% 20%;
-    width: 60%;
+    margin-left: 5%;
+    margin-top: 3%;
+    width: 90%;
+    box-shadow: 10px 10px 20px 10px;
+
 }
 
 .fotosMain{
@@ -81,7 +114,6 @@ height: 50px;
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: darkmagenta;
 }
 
 .mainCards {
@@ -89,7 +121,6 @@ height: 50px;
     flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
-    background-color: burlywood;
     padding: 5%;
     
 }
@@ -101,13 +132,28 @@ height: 50px;
     flex-direction: column;
     align-items: center;
     padding: 1%;
-    box-shadow: 0px 8px 10px;
+    box-shadow: 10px 10px 20px 10px;
+}
+
+.tituloFotos {
+    font-size: 40px;
+}
+
+.descripcionFotos {
+    font-size: 30px;
 }
 
 .fotoCalendar { 
     width: 100%;
 }
 
+.navTitulo {
+    color: rgb(34, 34, 34);
+}
+
+ p{
+    text-align: center;
+}
 .mapa {
     background-color: darkslategrey;
     width: 100%;
@@ -137,7 +183,7 @@ p{
  footer {
     bottom:0;
     width:100%; 
-    background:#6cf;
+    background:#CAFABE;
  }
 
 /* Diseño del contenedor padre del Footer*/
@@ -153,18 +199,14 @@ p{
 /* Diseño del contenedor del logo del Footer*/
 .contFooterA {
     width: 100%;
-    padding-left: 30%;
 }
 
 /* Diseño del logo del Footer*/
 .contFooterA img {
-    width: 50%;
+    width: 60%;
+    margin-left: 20%;
 }
 
-/* Diseño de los títulos del Footer*/
-.contFooterB h2{
-    font-size: 25px;
- }
 
  /* Diseño del contenedor del contacto del Footer*/
  .contFooterB .contFooterC {
@@ -175,22 +217,82 @@ p{
      text-align: center;
      width: 40%;
  }
+ .whats-app {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 15px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
 
+.instagram {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 115px;
+    right: 15px;
+    background-color: #974385;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+
+
+.my-float {
+    margin-top: 16px;
+}
 
 /* -----------------Cambios en el diseño a partir de 576px EN FOOTER, ----------------*/
 /*------------------------------------------------------------------------------------*/
 
+@media (min-width: 500px) {
+
+    .contFooterA img{
+        width: 40%;
+        margin-left: 30%;
+    }
+}
  /* Cambios en el diseño a partir de 768px*/
     
     @media (min-width: 768px) {
     
+        .navCeluCompu {
+            display: flex;
+            justify-content: space-around;
+            position:initial;
+            height: auto;
+            padding: 0;
+            opacity: 100%;
+            transform: none;
+            width: 100%;
+            transition: none;
+            width: 100%;
+            padding-left: 10px;
+        }
+        .burgerButon{
+            display: none;
+        }
+        
+
      .contFooterA {
-        margin-bottom: 30px;
-        padding-left: 0%;
-        width: 16%;
+        width: 15%;
+        text-align: center;
     }
-    .contFooterA img {
-        width: 90%;
+
+    .contFooterA img{
+        width: 100%;
+        margin-left: 0%;
     }
     a.categFooter {
         width: 90%;
@@ -198,4 +300,11 @@ p{
     .card{
     width: 25%;
     }
+    }
+
+    @media (min-width: 1024px) {
+    
+        .contFooterA img{
+           width: 200px;
+       }
     }
