--- a/views/nuevoViaje.html
+++ b/views/nuevoViaje.html
@@ -28,19 +28,42 @@
       </svg>
     </a>
     
-    <a  class="instagram" href="https://www.instagram.com/bautiiorfida/" target="_blank">
+    <a  class="instagram" href="https://www.instagram.com/easypool/" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram">
         <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
       </svg>
     </a>
     
-    <nav class="navCeluCompu show" style="background-color: #325c37;">
-        <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/index.html"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #325c37;"><h3 class = "navTitulo">Inicio</h3></button></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button"class="btn btn-outline-success" style= "--bs-btn-border-color: #325c37;"><h3 class = "navTitulo">¿Quiénes somos?</h3></button></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"><button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #325c37;"> <h3 class = "navTitulo">Agregá tu nuevo viaje</h3></button></div></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #325c37;" ><h3 class = "navTitulo">Contacto</h3></button></div>
-        <div class="flex-sm-fill text-sm-center nav-link" href="#"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #325c37;"><h3 class = "navTitulo">Mi cuenta</h3></button></div>
-      </nav> 
+    <nav class="navCeluCompu show" style="background-color: #cafabe;">
+      <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="index.html"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe; "><h3 class = "navTitulo">Inicio</h3></button></a>
+      <a class="flex-sm-fill text-sm-center nav-link" href="quienesSomos.html"> <button type="button"class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;"><h3 class = "navTitulo">¿Quiénes somos?</h3></button></a>
+      <a class="flex-sm-fill text-sm-center nav-link" href="nuevoViaje.html"><button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;"> <h3 class = "navTitulo">Agregá tu nuevo viaje</h3></button></a></a>
+      <a class="flex-sm-fill text-sm-center nav-link" href="contacto.html"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;" ><h3 class = "navTitulo">Contacto</h3></button></a>
+      <a class="flex-sm-fill text-sm-center nav-link" href="registro.html"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;"><h3 class = "navTitulo">Mi cuenta</h3></button></a>
+    </nav> 
+
+      <main>
+        
+        <h2 style="text-align:center; padding-top: 2%;"> Agregá tu nuevo viaje </h2>
+
+        <form  class = "formulario">
+
+            <span class = "labels" id="basic-addon1">Fecha del evento:</span>
+            <input type="datetime-local" class="form-control" placeholder="New username" aria-label="Username" aria-describedby="basic-addon1">
+
+            <span class = "labels" id="basic-addon1">Punto de partida:</span>
+            <input type="text" class="form-control" placeholder="Av. Rivadavia 1001, CABA Argentina" aria-label="Username" aria-describedby="basic-addon1">
+
+            <span class = "labels" id="basic-addon1">Punto de destino:</span>
+            <input type="text" class="form-control" placeholder="Av. Congreso 502, CABA Argentina" aria-label="Username" aria-describedby="basic-addon1">
+
+            <span class = "labels" id="basic-addon1">Aclaraciones del viaje:</span>
+            <input type="text" class="form-control" placeholder="Cuántas personas y qué esperas de este nuevo viaje?" aria-label="Username" aria-describedby="basic-addon1">
+        
+          <a href = "index.html" type="submit"  class="btn btn-success btnForm">Confrimar evento</a>
+
+        </form>
+      </main>
 
       <footer class="contenedorFooter">
 
