--- a/views/quienesSomos.html
+++ b/views/quienesSomos.html
@@ -40,129 +40,34 @@
       <a class="flex-sm-fill text-sm-center nav-link" href="nuevoViaje.html"><button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;"> <h3 class = "navTitulo">Agregá tu nuevo viaje</h3></button></a></a>
       <a class="flex-sm-fill text-sm-center nav-link" href="contacto.html"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;" ><h3 class = "navTitulo">Contacto</h3></button></a>
       <a class="flex-sm-fill text-sm-center nav-link" href="registro.html"> <button type="button" class="btn btn-outline-success" style= "--bs-btn-border-color: #cafabe;"><h3 class = "navTitulo">Mi cuenta</h3></button></a>
-    </nav> 
-      
-<main class = "contMain">
-    
-  <div id="carouselExampleCaptions" class="carousel slide contfotosMain" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../public/images/amigosCarrusel.jpg" class="d-block w-100 fotosMain" alt="fotos de amigos">
-      </div>
-      <div class="carousel-item">
-        <img src="../public/images/ecologiaCarrusel.jpg" class="d-block w-100 fotosMain" alt="fotos de ecologia">
-      </div>
-      <div class="carousel-item">
-        <img src="../public/images/paisajeCarrusel.jpg" class="d-block w-100 fotosMain" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+    </nav>
 
-    <div class="mainCards">
+    <main class="quienesSomosMain">   
+        <div class="card-bodyQuienes">
+              <h5 class="card-title">¿Quiénes somos?</h5>
+              <p class="card-text">Somos una empresa que busca conectar a las personas que comparten rutinas de transporte en su día a día para así no solo conectarlos y generar nuevas amistades, sino también ayudar al medioambiente con la reducción de vehículos en las calles.</p>
+              <a href="registro.html" type="submit"  class="btn btn-success" style="margin-left: 37%; width: 25%">Quiero sumarme!</a>
+            </div>
 
-        <div class="card text-center cards"> 
-            <a href = "https://calendar.google.com/calendar/u/0/r?tab=wc&pli=1"> <button type="button" class="btn btn-outline-success">Mi calendario</button></a>
+    <div class="contQuienesSomos">
+        <div class="cardQuienes">
             <div class="card-body">
-              <img class= "fotoCalendar" src="../public/images/calendar.jpg">
-            </div>
-            <div class="card-footer text-muted">
-              Editado hace 5 días
-            </div>
-          </div>
-
-        <div class="card text-center cards">
-            <a href = "https://www.google.com.ar/maps/preview"><button type="button" class="btn btn-outline-success">Ver amigos en el mapa</button></a>
-            <div class="card-body">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13157.983002751058!2d-58.8633397!3d-34.46494595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1653075386382!5m2!1ses!2sar" class="mapa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-            
-              </div>
-            <div class="card-footer text-muted">
-              Mirá dónde están tus amigos en tiempo real!
+            <img src="../public/images/quienesSomosImage.jpg" class="card-img-top">
+                <h2> ¿Cuál es nuestra misión?</h2>
+              <h5 style="padding: 0px 2% 0px 2%;"> Tenemos como misión reducir un 20% la cantidad de vehículos en la calle para el 2025</h5>
             </div>
           </div>
 
-        <div class="card text-center cards">
-            <button type="button" class="btn btn-outline-success">Solicitudes de Poolers</button>
+          <div class="cardQuienes">
             <div class="card-body">
-
-              <div class="solicitud">
-                <div class="contImgSolicutud">
-                  <img src="../public/images/fotoPerfil.jpg" class="userImg">
-                </div> 
-                  <div>Bautista Iorfida</div>                
-                <button type="button" class="btn btn-outline-success botonMio"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                  <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
-                </svg></button>
-               
-              </div> 
-              
-              <div class="solicitud">
-                <div class="contImgSolicutud">
-                  <img src="../public/images/fotoMerfilMessi.jpg" class="userImg">
-                </div> 
-                  <div>Lionel Messi</div>                
-                <button type="button" class="btn btn-outline-success botonMio"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                  <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
-                </svg></button>
-               
-              </div> 
-              
-              <div class="solicitud">
-                <div class="contImgSolicutud">
-                  <img src="../public/images/fotoPerfilNadal.jpg" class="userImg">
-                </div> 
-                  <div>Reafael Nadal</div>                
-                <button type="button" class="btn btn-outline-success botonMio"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                  <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
-                </svg></button>
-               
-              </div> 
-              
-            </div>
-            <div class="card-footer text-muted">
-              Últimas 3 peticiones de amistad
+            <img src="../public/images/quienesSomos2img" class="card-img-top" >
+                <h2> ¿Cuál es nuestra visión?</h2>
+              <h5 > Tenemos como visión convertirnos en una empresa reconocida en la región centro del país por la seguridad de nuestro servicio y calidad de nuestra comunidad </h5>
             </div>
           </div>
     </div>
-
-    <div class="card news">
-      <div class="row g-0">
-        <div class="col-md-4 contImgNews">
-          <img src="../public/images/fotoFeriado.jpg" class="img-fluid rounded-start"alt="...">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h2 class="card-title"> Acordate que los feriados cambian tus rutinas, Chequeá cuando son los feriados de este mes para no tener problemas:</h2>
-
-            <ul class = "listaFeriados"> 
-              <div id = diaFeriado0> </div>
-              <div id = motivoFeriado0> </div>
-              <div id = diaFeriado1> </div>
-              <div id = motivoFeriado1> </div>
-              <div id = diaFeriado2> </div>
-              <div id = motivoFeriado2> </div>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-</main>
-
-<footer class="contenedorFooter">
+    </main>
+    <footer class="contenedorFooter">
 
         <div class="contFooterA"> 
             <img src="../public/images/logoPag1.png" width= "105px"> 
